Update env-var-config.groovy