@@ -15,10 +15,13 @@ propertiesConfig = ['sandbox': [['NAME': 'NONPROD_SUBSCRIPTION_NAME', 'VALUE': '
                                 ['NAME': 'PROD_SUBSCRIPTION_NAME', 'VALUE': 'sandbox'],
                                 ['NAME': 'PROD_ENVIRONMENT_NAME', 'VALUE': 'sprod'],
                                 ['NAME': 'INFRA_VAULT_NAME', 'VALUE': 'infra-vault-sandbox']],
-                    'prod'   : [['NAME': 'INFRA_VAULT_NAME', 'VALUE': 'infra-vault']]]
+                    'prod'   : [['NAME': 'INFRA_VAULT_NAME', 'VALUE': 'infra-vault']],
+                    'common' : [['NAME': 'JAVA_OPTS', 'VALUE': '-Xmx2g -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8'],
+                                ['NAME': 'GRADLE_OPTS', 'VALUE': '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"']]]
 
 List<Entry> envVarList = new ArrayList<Entry>()
-propertiesConfig["${jenkins_env}"].each { envVar ->
+
+propertiesConfig["${jenkins_env}", "common"].each { envVar ->
   try {
     envVarList.add(new Entry(envVar.NAME, envVar.VALUE))
   } catch (MissingMethodException e) {
